cmake_minimum_required(VERSION 3.19)
project(acarstrans)

if (NOT MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
endif()

file(GLOB PLANE_CORE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
list(REMOVE_ITEM PLANE_CORE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/acars_sim.c")
list(REMOVE_ITEM PLANE_CORE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/acars_gui.c")

add_executable(acarstrans_exe acars_sim.c ${PLANE_CORE_SOURCES})
add_library(acarstrans SHARED ${PLANE_CORE_SOURCES})

set_target_properties(acarstrans PROPERTIES output_name "acarstrans")

find_library(LIBIIO_LIB iio)
if (LIBIIO_LIB)
    message(STATUS "Found libiio: ${LIBIIO_LIB}")
    target_compile_definitions(acarstrans_exe PRIVATE HAVE_LIBIIO=1)
    target_compile_definitions(acarstrans PRIVATE HAVE_LIBIIO=1)
else ()
    message(STATUS "libiio not found; AD936x backend will be disabled.")
endif ()

find_library(UHD_LIB uhd)

if (UHD_LIB)
    message(STATUS "Found UHD: ${UHD_LIB}")
    target_compile_definitions(acarstrans_exe PRIVATE HAVE_UHD=1)
    target_compile_definitions(acarstrans PRIVATE HAVE_UHD=1)
else ()
    message(STATUS "UHD not found; USRP backend will be disabled.")
endif ()

if (NOT MSVC)
    target_link_libraries(acarstrans_exe LINK_PUBLIC m)
    target_link_libraries(acarstrans LINK_PUBLIC m)
endif ()

target_link_libraries(acarstrans_exe LINK_PUBLIC ${UHD_LIB} ${LIBIIO_LIB})
target_link_libraries(acarstrans LINK_PUBLIC ${UHD_LIB} ${LIBIIO_LIB})

find_package(PkgConfig QUIET)
if (PkgConfig_FOUND)
    pkg_check_modules(GTK3 gtk+-3.0)
endif ()

if (GTK3_FOUND)
    message(STATUS "GTK3 found; building acarstrans_gui")
    add_executable(acarstrans_gui acars_gui.c ${PLANE_CORE_SOURCES})
    target_compile_options(acarstrans_gui PRIVATE ${GTK3_CFLAGS_OTHER})
    target_include_directories(acarstrans_gui PRIVATE ${GTK3_INCLUDE_DIRS})
    target_link_directories(acarstrans_gui PRIVATE ${GTK3_LIBRARY_DIRS})
    if (LIBIIO_LIB)
        target_compile_definitions(acarstrans_gui PRIVATE HAVE_LIBIIO=1)
    endif ()
    if (UHD_LIB)
        target_compile_definitions(acarstrans_gui PRIVATE HAVE_UHD=1)
    endif ()
    if (NOT MSVC)
        target_link_libraries(acarstrans_gui PRIVATE m)
    endif ()
    target_link_libraries(acarstrans_gui PRIVATE ${GTK3_LIBRARIES} ${UHD_LIB} ${LIBIIO_LIB})
else ()
    message(STATUS "GTK3 not found; skipping acarstrans_gui (install libgtk-3-dev).")
endif ()
